SERVER-42856 Make the check for chunk moved in the op observer take hashed shard keys into account